# webcamize

./: Cargo.toml  notes.txt
src/: main.rs
src/webcamized/: mod.rs
src/webcamized/canon/: mod.rs
src/webcamized/v4l2loopbackctl/: mod.rs
